--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 html {
     scroll-behavior: smooth;
@@ -33,9 +34,15 @@ p {
     background-color: #ffffff;
     &__inner {
         padding: 16px 0;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     &__logo {
         display: block;
@@ -48,8 +55,12 @@ p {
         }
     }
     &__call {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         margin-right: 20px;
         &--img {
             display: block;
@@ -62,8 +73,13 @@ p {
             }
         }
         &--item {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
             margin-left: 13px;
             font-family: 'ProximaNova';
             font-weight: 400;
@@ -136,6 +152,8 @@ p {
         &:hover {
             background: #FF6464;
             color: #ffffff;
+            -webkit-transition: .2s linear;
+            -o-transition: .2s linear;
             transition: .2s linear;
         }
         &:active {
@@ -148,7 +166,11 @@ p {
         background: #FFE7B7;
         color: #292727;
         &:hover {
-            transform: scale(1.03);
+            -webkit-transform: scale(1.03);
+                -ms-transform: scale(1.03);
+                    transform: scale(1.03);
+            -webkit-transition: .2s linear;
+            -o-transition: .2s linear;
             transition: .2s linear;
         }
     }
@@ -165,7 +187,11 @@ p {
         fill: #292727;
     }
     &:hover {
-        transform: scale(1.03);
+        -webkit-transform: scale(1.03);
+            -ms-transform: scale(1.03);
+                transform: scale(1.03);
+        -webkit-transition: .2s linear;
+        -o-transition: .2s linear;
         transition: .2s linear;
     }
 }
@@ -188,16 +214,24 @@ p {
         }
     }
     &-timer {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         position: absolute;
         bottom: -75px;
         background-color: #ffffff;
         width: 1180px;
         height: 150px;
         padding: 27px 100px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 45px;
         &__title {
             display: block;
@@ -216,11 +250,20 @@ p {
     .timer {
         &__inner {
             padding: 0 120px 0 20px;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-direction: row;
+            -webkit-box-orient: horizontal;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: row;
+                    flex-direction: row;
             &--item {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                align-items: center;
+                -webkit-box-align: center;
+                    -ms-flex-align: center;
+                        align-items: center;
                 &:not(:last-child) {
                     &::after {
                     content: '';
@@ -232,8 +275,13 @@ p {
                     }
                 }
                 &__col {
+                    display: -webkit-box;
+                    display: -ms-flexbox;
                     display: flex;
-                    flex-direction: column;
+                    -webkit-box-orient: vertical;
+                    -webkit-box-direction: normal;
+                        -ms-flex-direction: column;
+                            flex-direction: column;
                 }
                 &__num {
                     font-family: 'ProximaNova';
@@ -283,7 +331,9 @@ p {
     }
     &__inner {
         padding: 40px 0;
+        display: -ms-grid;
         display: grid;
+        -ms-grid-columns: 33.33% 0px 33.33% 0px 33.33%;
         grid-template-columns: 33.33% 33.33% 33.33%;
         gap: 0px 0px;
         &--item {
@@ -325,8 +375,12 @@ p {
             padding: 33px 280px 55px 85px;
         }
         &--footer {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            align-items: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             padding: 58px 0 50px 85px;
             border-top: 1px #FFE7B7 solid;
         }
@@ -344,7 +398,10 @@ p {
             margin-bottom: 0;
         }
         &:hover {
-            text-decoration: underline #FFE7B7;
+            -webkit-text-decoration: underline #FFE7B7;
+                    text-decoration: underline #FFE7B7;
+            -webkit-transition: .2s linear;
+            -o-transition: .2s linear;
             transition: .2s linear;
         }
     }
@@ -353,9 +410,16 @@ p {
     }
     &__cost {
         padding: 0 0 40px 85px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
         &--title {
             display: block;
             margin-bottom: 40px;
@@ -383,7 +447,9 @@ p {
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                transform: translateX(-50%);
+                -webkit-transform: translateX(-50%);
+                    -ms-transform: translateX(-50%);
+                        transform: translateX(-50%);
                 width: 150px;
                 height: 2px;
                 background-color: #FF6464;
@@ -395,7 +461,9 @@ p {
                     position: absolute;
                     top: 50%;
                     left: 50%;
-                    transform: translateX(-50%);
+                    -webkit-transform: translateX(-50%);
+                        -ms-transform: translateX(-50%);
+                            transform: translateX(-50%);
                     width: 150px;
                     height: 2px;
                     background-color: #FFE7B7;
@@ -421,11 +489,20 @@ p {
     padding: 90px 0;
     &__inner {
         padding: 50px 0 0 0;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         &--line {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            justify-content: space-between;
+            -webkit-box-pack: justify;
+                -ms-flex-pack: justify;
+                    justify-content: space-between;
         }
         &--item {
             display: block;
@@ -469,9 +546,16 @@ p {
     padding: 60px 0 90px 0;
     &__inner {
         margin-top: 70px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         &--text {
             font-family: 'ProximaNova';
             font-weight: normal;
@@ -489,14 +573,20 @@ p {
             text-decoration: underline;
             color: #292727;
             &:hover {
+                -webkit-transition: .2s linear;
+                -o-transition: .2s linear;
                 transition: .2s linear;
             }
         }
     }
     &__link {
         margin: 60px auto 0 auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
         width: 550px;
         &--item {
             display: block;
@@ -505,6 +595,8 @@ p {
             fill: #FF6464;
             &:hover {
                 fill: rgb(250, 71, 71);
+                -webkit-transition: .2s linear;
+                -o-transition: .2s linear;
                 transition: .2s linear;
             }
             svg {
@@ -556,7 +648,9 @@ p {
         &-timer {
             width: 1000px;
             left: 50%;
-            transform: translateX(-50%);
+            -webkit-transform: translateX(-50%);
+                -ms-transform: translateX(-50%);
+                    transform: translateX(-50%);
             padding: 27px 50px;
         }
     }
@@ -677,8 +771,13 @@ p {
             display: none;
         }
         &__inner {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            flex-direction: column;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
             &--item {
                 margin: 0 auto 30px auto;
                 width: 80%;
@@ -707,7 +806,9 @@ p {
             height: 70px;
             padding: 21px 0;
             &:hover {
-                transform: none;
+                -webkit-transform: none;
+                    -ms-transform: none;
+                        transform: none;
             }
         }
     }
@@ -718,12 +819,24 @@ p {
         padding: 0;
         &__inner {
             &--line {
+                display: -webkit-box;
+                display: -ms-flexbox;
                 display: flex;
-                flex-direction: column;
-                align-items: center;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
+                -webkit-box-align: center;
+                    -ms-flex-align: center;
+                        align-items: center;
                 &:last-child {
+                    display: -webkit-box;
+                    display: -ms-flexbox;
                     display: flex;
-                    flex-direction: column-reverse;
+                    -webkit-box-orient: vertical;
+                    -webkit-box-direction: reverse;
+                        -ms-flex-direction: column-reverse;
+                            flex-direction: column-reverse;
                 }
             }
             &--item {
@@ -917,6 +1030,8 @@ p {
             position: absolute;
             bottom: -85px;
             left: 50%;
+            -webkit-transform: translateX(-50%);
+            -ms-transform: translateX(-50%);
             transform: translateX(-50%);
         }
     }
