--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *,
 ::before,
 ::after {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -39,8 +40,14 @@ p {
 }
 .header__inner {
   padding: 16px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .header__logo {
@@ -54,7 +61,11 @@ p {
   height: 100%;
 }
 .header__call {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin-right: 20px;
 }
@@ -69,7 +80,12 @@ p {
   height: 100%;
 }
 .header__call--item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   margin-left: 13px;
   font-family: "ProximaNova";
@@ -147,6 +163,8 @@ p {
 .button-timer:hover {
   background: #FF6464;
   color: #ffffff;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 .button-timer:active {
@@ -159,7 +177,11 @@ p {
   color: #292727;
 }
 .button-card:hover {
+  -webkit-transform: scale(1.03);
+  -ms-transform: scale(1.03);
   transform: scale(1.03);
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 
@@ -176,7 +198,11 @@ p {
   fill: #292727;
 }
 .arrow:hover {
+  -webkit-transform: scale(1.03);
+  -ms-transform: scale(1.03);
   transform: scale(1.03);
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 
@@ -197,11 +223,20 @@ p {
 }
 .intro .timer__inner {
   padding: 0 120px 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
 }
 .intro .timer__inner--item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .intro .timer__inner--item:not(:last-child)::after {
@@ -213,7 +248,12 @@ p {
   background-color: #292727;
 }
 .intro .timer__inner--item__col {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 .intro .timer__inner--item__num {
@@ -238,8 +278,15 @@ p {
   display: none;
 }
 .intro-timer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: absolute;
   bottom: -75px;
@@ -247,6 +294,7 @@ p {
   width: 1180px;
   height: 150px;
   padding: 27px 100px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 45px;
 }
@@ -279,7 +327,9 @@ p {
 }
 .package__inner {
   padding: 40px 0;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 33.33% 0px 33.33% 0px 33.33%;
   grid-template-columns: 33.33% 33.33% 33.33%;
   gap: 0px 0px;
 }
@@ -329,7 +379,11 @@ p {
   padding: 33px 280px 55px 85px;
 }
 .package__item--footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 58px 0 50px 85px;
   border-top: 1px #FFE7B7 solid;
@@ -350,12 +404,21 @@ p {
 .package__link:hover {
   -webkit-text-decoration: underline #FFE7B7;
   text-decoration: underline #FFE7B7;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 .package__cost {
   padding: 0 0 40px 85px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: flex-start;
 }
 .package__cost--title {
@@ -386,6 +449,8 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   width: 150px;
   height: 2px;
@@ -397,6 +462,8 @@ p {
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   width: 150px;
   height: 2px;
@@ -420,11 +487,20 @@ p {
 }
 .autor__inner {
   padding: 50px 0 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 .autor__inner--line {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 .autor__inner--item {
@@ -469,8 +545,15 @@ p {
 }
 .footer__inner {
   margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 .footer__inner--text {
@@ -491,11 +574,17 @@ p {
   color: #292727;
 }
 .footer__inner--email:hover {
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 .footer__link {
   margin: 60px auto 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 550px;
 }
@@ -507,6 +596,8 @@ p {
 }
 .footer__link--item:hover {
   fill: #fa4747;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 .footer__link--item svg {
@@ -526,6 +617,7 @@ p {
   overflow: auto;
   z-index: 1;
   padding: 20px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   background-color: black;
   background-color: rgba(0, 0, 0, 0.75);
@@ -549,6 +641,7 @@ p {
   position: relative;
   z-index: 2;
   max-width: 600px;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 90%;
   background: #fff;
@@ -570,6 +663,8 @@ p {
 }
 .modal a.close-modal:hover {
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20width%3D%2241%22%20height%3D%2240%22%20viewBox%3D%220%200%2041%2040%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cline%20x1%3D%221.35355%22%20y1%3D%220.646447%22%20x2%3D%2240.3535%22%20y2%3D%2239.6464%22%20stroke%3D%22%23FF6464%22%2F%3E%0A%3Cline%20y1%3D%22-0.5%22%20x2%3D%2255.1543%22%20y2%3D%22-0.5%22%20transform%3D%22matrix%28-0.707107%200.707107%200.707107%200.707107%2040%201%29%22%20stroke%3D%22%23FF6464%22%2F%3E%0A%3C%2Fsvg%3E%0A");
+  -webkit-transition: 0.4s linear;
+  -o-transition: 0.4s linear;
   transition: 0.4s linear;
 }
 
@@ -610,6 +705,8 @@ p {
 }
 .button-more:hover {
   background: #FFDA8F;
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
   transition: 0.2s linear;
 }
 
@@ -618,6 +715,8 @@ p {
   position: fixed;
   top: 50%;
   left: 50%;
+  -webkit-transform: translateY(-50%) translateX(-50%);
+  -ms-transform: translateY(-50%) translateX(-50%);
   transform: translateY(-50%) translateX(-50%);
   padding: 12px 16px;
   border-radius: 5px;
@@ -631,15 +730,19 @@ p {
   width: 2px;
   margin: 0 1px;
   display: inline-block;
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
   animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
 .modal-spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
 .modal-spinner .rect3 {
+  -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
 .modal-spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
 
@@ -676,6 +779,13 @@ p {
   .arrow {
     margin-left: 20px;
   }
+
+  .modal a.close-modal {
+    width: 21px;
+    height: 21px;
+    top: -21px;
+    right: -21px;
+  }
 }
 @media (max-width: 1112px) {
   .intro {
@@ -689,6 +799,8 @@ p {
   .intro-timer {
     width: 1000px;
     left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
     padding: 27px 50px;
   }
@@ -790,7 +902,12 @@ p {
   }
 
   .package__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 
@@ -823,6 +940,8 @@ p {
     padding: 21px 0;
   }
   .button-card:hover {
+    -webkit-transform: none;
+    -ms-transform: none;
     transform: none;
   }
 
@@ -835,12 +954,24 @@ p {
   }
 
   .autor__inner--line {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
   .autor__inner--line:last-child {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
     flex-direction: column-reverse;
   }
 
@@ -1031,6 +1162,8 @@ p {
     position: absolute;
     bottom: -85px;
     left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
   }
 
@@ -1266,7 +1399,6 @@ p {
     overflow: hidden;
   }
 }
-
 /*FONTS*/
 @font-face {
   font-family: "ProximaNova";
