--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,38 +1,3 @@
-/*TIMER*/
-@-webkit-keyframes "sk-stretchdelay" {
-	0%,40%,100% {
-		-webkit-transform: scaleY(0.5);
-	}
-	20% {
-		-webkit-transform: scaleY(1.0);
-	}
-}
-@keyframes "sk-stretchdelay" {
-	0%,40%,100% {
-		transform: scaleY(0.5);
-		-webkit-transform: scaleY(0.5);
-	}
-	20% {
-		transform: scaleY(1.0);
-		-webkit-transform: scaleY(1.0);
-	}
-}
-/*FONTS*/
-@font-face {
-	font-family: "ProximaNova";
-	src: url("../fonts/ProximaNova-Regular.ttf");
-	font-weight: 400;
-}
-@font-face {
-	font-family: "ProximaNova";
-	src: url("../fonts/ProximaNova-Bold.ttf");
-	font-weight: 700;
-}
-@font-face {
-	font-family: "Gilroy";
-	src: url("../fonts/gilroy-black.ttf");
-	font-weight: 900;
-}
 *,
 ::before,
 ::after {
@@ -796,6 +761,12 @@ p {
 	.arrow {
 		margin-left: 20px;
 	}
+	.modal a.close-modal {
+		width: 21px;
+		height: 21px;
+		top: -21px;
+		right: -21px;
+	}
 }
 @media (max-width: 1112px) {
 	.intro {
@@ -1331,4 +1302,20 @@ p {
 	.intro {
 		overflow: hidden;
 	}
+}
+/*FONTS*/
+@font-face {
+	font-family: "ProximaNova";
+	src: url("../fonts/ProximaNova-Regular.ttf");
+	font-weight: 400;
+}
+@font-face {
+	font-family: "ProximaNova";
+	src: url("../fonts/ProximaNova-Bold.ttf");
+	font-weight: 700;
+}
+@font-face {
+	font-family: "Gilroy";
+	src: url("../fonts/gilroy-black.ttf");
+	font-weight: 900;
 }
