--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,17 @@ p {
   padding: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 25px;
+  padding: 0;
+  list-style: none;
+}
+
 .container {
   margin: 0 auto;
   width: 1180px;
@@ -176,13 +187,9 @@ p {
   background: #FFE7B7;
   color: #292727;
 }
-.button-card:hover {
-  -webkit-transform: scale(1.03);
-  -ms-transform: scale(1.03);
-  transform: scale(1.03);
-  -webkit-transition: 0.2s linear;
-  -o-transition: 0.2s linear;
-  transition: 0.2s linear;
+.button-card__green {
+  background-color: #204D48;
+  color: #FFE7B7;
 }
 
 .arrow {
@@ -196,14 +203,6 @@ p {
   width: 100%;
   height: 100%;
   fill: #292727;
-}
-.arrow:hover {
-  -webkit-transform: scale(1.03);
-  -ms-transform: scale(1.03);
-  transform: scale(1.03);
-  -webkit-transition: 0.2s linear;
-  -o-transition: 0.2s linear;
-  transition: 0.2s linear;
 }
 
 .-yellow svg {
@@ -322,94 +321,17 @@ p {
   height: 550px;
 }
 
-.package {
-  position: relative;
-}
 .package__inner {
-  padding: 40px 0;
+  padding: 92px 0 100px 0;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 33.33% 0px 33.33% 0px 33.33%;
   grid-template-columns: 33.33% 33.33% 33.33%;
   gap: 0px 0px;
 }
-.package__inner--item:nth-child(1) {
+.package__item {
+  position: relative;
   background-color: #ffffff;
-}
-.package__inner--item:nth-child(2) {
-  background-color: #FF6464;
-}
-.package__inner--item:nth-child(3) {
-  background-color: #204D48;
-}
-.package .-dark {
-  color: #292727;
-}
-.package-img {
-  display: block;
-  width: auto;
-  height: 197px;
-  position: absolute;
-  top: 60px;
-  left: 19%;
-}
-.package__item--header {
-  padding: 45px 0 33px 85px;
-  border-bottom: 1px #FFE7B7 solid;
-}
-.package__item--header__title {
-  display: block;
-  margin-bottom: 8px;
-  font-family: "ProximaNova";
-  font-style: normal;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 32px;
-  color: #ffffff;
-}
-.package__item--header__subtitle {
-  font-family: "ProximaNova";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 19px;
-  color: #ffffff;
-}
-.package__item--text {
-  padding: 33px 280px 55px 85px;
-}
-.package__item--footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 58px 0 50px 85px;
-  border-top: 1px #FFE7B7 solid;
-}
-.package__link {
-  display: block;
-  margin-bottom: 25px;
-  font-family: "ProximaNova";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
-  color: #FFFFFF;
-}
-.package__link:last-child {
-  margin-bottom: 0;
-}
-.package__link:hover {
-  -webkit-text-decoration: underline #FFE7B7;
-  text-decoration: underline #FFE7B7;
-  -webkit-transition: 0.2s linear;
-  -o-transition: 0.2s linear;
-  transition: 0.2s linear;
-}
-.package__cost {
-  padding: 0 0 40px 85px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -417,73 +339,173 @@ p {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
+}
+.package__item--header {
+  font-family: "ProximaNova";
+  padding: 45px 10px 50px 85px;
+  border-bottom: 1px solid #FFE7B7;
+}
+.package__item--header__title {
+  margin-bottom: 8px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 32px;
+  color: #292727;
+}
+.package__item--header small {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+}
+.package__item--header small:not(.white) {
+  color: rgba(55, 35, 35, 0.6);
+}
+.package__item--body {
+  padding: 30px 150px 30px 85px;
+}
+.package__item--body__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
+  font-family: "ProximaNova";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  color: #292727;
 }
-.package__cost--title {
+.package__item--body__link:hover {
+  -webkit-transition: 1s linear;
+  -o-transition: 1s linear;
+  transition: 1s linear;
+  -webkit-text-decoration: underline #ffffff;
+  text-decoration: underline #ffffff;
+}
+.package__item--body__link:hover:not(.white) {
+  -webkit-text-decoration: underline #292727;
+  text-decoration: underline #292727;
+}
+.package__item--body__link::after {
   display: block;
-  margin-bottom: 40px;
+  content: url("../img/button.svg");
+  margin-left: 10px;
+  opacity: 0.7;
+}
+.package__item--price {
+  padding: 5px 0 60px 85px;
+  margin-top: auto;
+}
+.package__item--price__title {
+  margin-bottom: 25px;
   font-family: "ProximaNova";
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
   line-height: 32px;
-  color: #ffffff;
+  color: #000000;
 }
-.package__cost--old {
-  display: block;
+.package__item--price__old {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   font-family: "Gilroy";
   font-style: normal;
   font-weight: 900;
   font-size: 20px;
   line-height: 25px;
-  text-align: center;
-  color: #ffffff;
+  color: #292727;
 }
-.package__cost--old::after {
+.package__item--price__old::after {
   content: "";
   display: block;
   position: absolute;
   top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
+  left: -9px;
   width: 150px;
   height: 2px;
   background-color: #FF6464;
 }
-.package__cost--old:not(.-dark)::after {
+.package__item--price__old:not(.-dark)::after {
   content: "";
   display: block;
   position: absolute;
   top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
+  left: -9px;
   width: 150px;
   height: 2px;
   background-color: #FFE7B7;
 }
-.package__cost--new {
+.package__item--price__new {
   font-family: "Gilroy";
   font-style: normal;
   font-weight: 900;
   font-size: 30px;
   line-height: 37px;
-  text-align: center;
-  color: #FFE7B7;
-}
-.package__cost .-red {
   color: #FF6464;
+}
+.package__item--footer {
+  border-top: 1px solid #FFE7B7;
+  padding: 40px 0 50px 85px;
+  overflow: hidden;
+}
+.package__item--footer__buy {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.package__item--footer__buy:hover {
+  -webkit-transform: scale(1.03);
+  -ms-transform: scale(1.03);
+  transform: scale(1.03);
+  -webkit-transition: 0.2s linear;
+  -o-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+.package__item:nth-child(2) {
+  background-color: #FF6464;
+}
+.package__item:nth-child(3) {
+  background-color: #204D48;
+}
+.package__img {
+  display: block;
+  position: absolute;
+}
+.package__img--white {
+  left: 0;
+  top: -357px;
+}
+.package__img--red {
+  right: -25px;
+  bottom: 240px;
+  z-index: 1;
+}
+.package__img--green {
+  top: -278px;
+  right: 77px;
+}
+
+.white {
+  color: #ffffff;
+}
+.white:only-child::after {
+  display: block;
+  content: url("../img/button-white.svg");
+}
+.white__old {
+  -webkit-text-decoration: line-through #FFE7B7 2px;
+  text-decoration: line-through #FFE7B7 2px;
 }
 
 .autor {
-  padding: 90px 0;
+  padding: 20px 0;
 }
 .autor__inner {
   padding: 50px 0 0 0;
@@ -639,7 +661,7 @@ p {
   display: none;
   vertical-align: middle;
   position: relative;
-  z-index: 2;
+  z-index: 8;
   max-width: 600px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -755,25 +777,31 @@ p {
     background-position: center;
   }
 
-  .package-img {
-    height: 140px;
-    top: 100px;
-  }
-
   .package__item--header {
-    padding: 45px 0 33px 50px;
+    padding: 30px 80px 30px 25px;
   }
-
-  .package__item--text {
-    padding: 33px 136px 55px 50px;
+  .package__item--body {
+    padding: 30px 80px 30px 25px;
   }
-
+  .package__item--price {
+    padding: 5px 0 60px 25px;
+  }
   .package__item--footer {
-    padding: 58px 0 50px 50px;
+    padding: 40px 0 50px 25px;
   }
-
-  .package__cost {
-    padding: 0 0 40px 50px;
+  .package__img--white {
+    width: 300px;
+    height: auto;
+    top: -293px;
+  }
+  .package__img--red {
+    width: 220px;
+    height: auto;
+  }
+  .package__img--green {
+    width: 200px;
+    height: auto;
+    top: -200px;
   }
 
   .arrow {
@@ -815,33 +843,39 @@ p {
     line-height: 57px;
   }
 
-  .package__item--header {
-    padding: 30px 0 30px 15px;
+  .package__item--body__link {
+    font-size: 18px;
   }
-
-  .package__item--header__title {
+  .package__item--price__title {
     font-size: 24px;
   }
-
-  .package__item--text {
-    padding: 30px 100px 55px 15px;
-  }
-
-  .package__item--footer {
-    padding: 10px 0 20px 15px;
-  }
-
-  .package__link {
+  .package__item--price__old {
     font-size: 18px;
-    line-height: 21px;
   }
-
-  .package__cost {
-    padding: 0 0 40px 15px;
+  .package__item--price__old::after {
+    width: 140px;
   }
-
-  .package-img {
-    height: 100px;
+  .package__item--price__old:not(.-dark)::after {
+    width: 140px;
+  }
+  .package__item--price__new {
+    font-size: 28px;
+  }
+  .package__item--footer {
+    padding: 30px 0 30px 25px;
+  }
+  .package__img--white {
+    width: 220px;
+    top: -215px;
+  }
+  .package__img--red {
+    width: 170px;
+    bottom: 130px;
+  }
+  .package__img--green {
+    width: 158px;
+    top: -155px;
+    right: 45px;
   }
 
   .button-card {
@@ -869,8 +903,23 @@ p {
     margin: 0 10px;
   }
 
-  .package__item--text {
-    padding: 30px 84px 55px 15px;
+  .package__item--price__new {
+    font-size: 26px;
+  }
+  .package__item--footer {
+    padding: 30px 0 30px 25px;
+  }
+  .package__img--white {
+    width: 190px;
+    top: -184px;
+  }
+  .package__img--red {
+    width: 148px;
+    bottom: 110px;
+  }
+  .package__img--green {
+    width: 140px;
+    top: -142px;
   }
 
   .button-card {
@@ -879,7 +928,7 @@ p {
   }
 
   .arrow {
-    margin-left: 7px;
+    display: none;
   }
 
   .autor__inner--text {
@@ -897,41 +946,23 @@ p {
     line-height: 51px;
   }
 
-  .package-img {
-    display: none;
+  .package__item--price__new {
+    font-size: 26px;
   }
-
-  .package__inner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-
-  .package__inner--item {
-    margin: 0 auto 30px auto;
-    width: 80%;
-  }
-
-  .package__item--header {
-    padding: 25px 0 30px 25px;
-    border-bottom: none;
-  }
-
-  .package__item--text {
-    padding: 25px 0 0 25px;
-  }
-
   .package__item--footer {
-    border-top: none;
-    padding: 25px 0 45px 25px;
+    padding: 30px 0 30px 25px;
   }
-
-  .package__cost {
-    padding: 30px 0 20px 25px;
+  .package__img--white {
+    width: 156px;
+    top: -152px;
+  }
+  .package__img--red {
+    width: 148px;
+    bottom: 130px;
+  }
+  .package__img--green {
+    width: 140px;
+    top: -142px;
   }
 
   .button-card {
@@ -1035,6 +1066,32 @@ p {
 
   .title-video {
     display: block;
+  }
+
+  .package__inner {
+    padding: 140px 0 40px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .package__item {
+    margin-bottom: 140px;
+  }
+  .package__item:last-child {
+    margin-bottom: 0;
+  }
+  .package__item--footer__buy:hover {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+  .package__img--red {
+    top: -122px;
+    right: 0;
   }
 }
 @media (max-width: 768px) {
@@ -1196,10 +1253,6 @@ p {
     font-size: 42px;
   }
 
-  .package__inner--item {
-    width: 90%;
-  }
-
   .modal__inf {
     padding: 35px 35px 40px 20px;
   }
@@ -1275,24 +1328,6 @@ p {
   .title {
     font-size: 32px;
     line-height: 35px;
-  }
-
-  .package__inner--item {
-    width: 100%;
-  }
-
-  .package__item--header__subtitle {
-    font-size: 12px;
-    line-height: 15px;
-  }
-
-  .package__item--text {
-    padding: 1px 0 0 25px;
-  }
-
-  .package__link {
-    font-size: 16px;
-    line-height: 19px;
   }
 
   .autor__inner--item {
