added dasged underline

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -314,6 +314,7 @@ li {
         }
     }
 }
+
 .package {
 	&__inner {
 		padding: 92px 0 100px 0;
@@ -492,7 +493,7 @@ li {
 .white {
 	color: #ffffff;
 	&:only-child {
-		&::after {
+		&::before {
 			display: block;
 			content: url('../img/button-white.svg');
 		}
@@ -1846,7 +1847,10 @@ li {
 				font-size: 20px;
 				line-height: 24px;
 				color: #292727;
-
+				text-decoration: underline dashed 1px #f5f5f570;
+				&:not(.white) {
+					text-decoration: underline dashed 1px #9b9b9b54;;
+				}
 				&:hover {
 					-webkit-transition: 1s linear;
 					-o-transition: 1s linear;
@@ -1858,10 +1862,10 @@ li {
 						text-decoration: underline #292727;
 					}
 				}
-				&::after {
+				&::before{
 					display: block;
 					content: url("../img/button.svg");
-					margin-left: 10px;
+					margin-right: 10px;
 					opacity: .7;
 				}
 			}
@@ -1968,7 +1972,7 @@ li {
 .white {
 	color: #ffffff;
 	&:only-child {
-		&::after {
+		&::before {
 			display: block;
 			content: url('../img/button-white.svg');
 		}
