--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ li {
   -webkit-text-decoration: underline #292727;
   text-decoration: underline #292727;
 }
-.package__item--body__link::after {
+.package__item--body__link::before {
   display: block;
   content: url("../img/button.svg");
   margin-left: 10px;
@@ -495,7 +495,7 @@ li {
 .white {
   color: #ffffff;
 }
-.white:only-child::after {
+.white:only-child::before {
   display: block;
   content: url("../img/button-white.svg");
 }
@@ -1877,6 +1877,12 @@ li {
   font-size: 20px;
   line-height: 24px;
   color: #292727;
+  -webkit-text-decoration: underline dashed 1px #f5f5f570;
+          text-decoration: underline dashed 1px #f5f5f570;
+}
+.package__item--body__link:not(.white) {
+  -webkit-text-decoration: underline dashed 1px #9b9b9b54;
+          text-decoration: underline dashed 1px #9b9b9b54;
 }
 .package__item--body__link:hover {
   -webkit-transition: 1s linear;
@@ -1889,10 +1895,10 @@ li {
   -webkit-text-decoration: underline #292727;
   text-decoration: underline #292727;
 }
-.package__item--body__link::after {
+.package__item--body__link::before {
   display: block;
   content: url("../img/button.svg");
-  margin-left: 10px;
+  margin-right: 10px;
   opacity: 0.7;
 }
 .package__item--price {
@@ -1994,7 +2000,7 @@ li {
 .white {
   color: #ffffff;
 }
-.white:only-child::after {
+.white:only-child::before {
   display: block;
   content: url("../img/button-white.svg");
 }
