--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1787,7 +1787,8 @@ li {
             display: block;
             margin: 0 auto;
             width: 980px;
-            height: 550px;
+			height: 550px;
+			border: none;
         }
     }
 }
