--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ li {
   -webkit-text-decoration: underline #292727;
   text-decoration: underline #292727;
 }
-.package__item--body__link::after {
+.package__item--body__link::before {
   display: block;
   content: url("../img/button.svg");
   margin-left: 10px;
@@ -2990,16 +2990,19 @@ li {
 /*FONTS*/
 @font-face {
   font-family: "ProximaNova";
-  src: url("../fonts/ProximaNova-Regular.ttf");
+  src: local("../fonts/ProximaNova-Regular.ttf"), url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900");
   font-weight: 400;
+  font-display: swap;
 }
 @font-face {
   font-family: "ProximaNova";
-  src: url("../fonts/ProximaNova-Bold.ttf");
+  src: local("../fonts/ProximaNova-Bold.ttf"), url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900");
   font-weight: 700;
+  font-display: swap;
 }
 @font-face {
   font-family: "Gilroy";
-  src: url("../fonts/gilroy-black.ttf");
+  src: local("../fonts/gilroy-black.ttf"), url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900");
   font-weight: 900;
+  font-display: swap;
 }
